<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

   <fragment
        android:id="@+id/navigation_home"
        android:name="nferno1.fotosplash.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="nferno1.fotosplash.ui.collections.CollectionsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_collections" >
        <action
            android:id="@+id/action_navigation_dashboard_to_collectionsOpen"
            app:destination="@id/collectionsOpen" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="nferno1.fotosplash.ui.userdetails.UserDetails"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_collectionsOpen"
            app:destination="@id/collectionsOpen" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="nferno1.fotosplash.ui.details.DetailsFragment"
        android:label="@string/Photo"
        tools:layout="@layout/photo_details" >
        <argument
            android:name="photo"
            app:argType="nferno1.fotosplash.data.Results" />
    </fragment>
    <fragment
        android:id="@+id/collectionsOpen"
        android:name="nferno1.fotosplash.ui.collectionsOpen.CollectionsOpen"
        tools:layout="@layout/fragment_collections_open" >
        <action
            android:id="@+id/action_collectionsOpen_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
</navigation>